--- a/.nuspec
+++ b/.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
 	<metadata>
 		<id>ZeroORM</id>
-		<version>0.9.0</version>
+		<version>$version$</version>
 		<authors>George Bessonov</authors>
 		<owners>bessgeor</owners>
 		<licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
