--- a/src/ZeroORM.csproj
+++ b/src/ZeroORM.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ZeroORM.Extensibility" Version="1.0.1" />
+    <PackageReference Include="ZeroORM.Extensibility" Version="1.0.1-dev.30" />
   </ItemGroup>
 
 </Project>
