--- a/src/ZeroORM.csproj
+++ b/src/ZeroORM.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HellBrick.Diagnostics" Version="3.1.1" />
     <PackageReference Include="ZeroORM.Extensibility" Version="1.0.1-dev.30" />
   </ItemGroup>
 
