--- a/src/ZeroORM.csproj
+++ b/src/ZeroORM.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="HellBrick.Diagnostics" Version="3.1.1" />
-    <PackageReference Include="ZeroORM.Extensibility" Version="1.0.1-dev.30" />
+    <PackageReference Include="ZeroORM.Extensibility" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
